@@ -15,7 +15,7 @@ from . import cache, utils
 from .common import kodi, log_utils
 from .constants import Keys, SCOPES
 from .error_handling import api_error_handler
-from .twitch_exceptions import TwitchException
+from .twitch_exceptions import PlaybackFailed, TwitchException
 
 from twitch import queries as twitch_queries
 from twitch import oauth
@@ -368,7 +368,12 @@ class Twitch:
 
     @staticmethod
     def error_check(results):
-        if 'error' in results: raise TwitchException(results)
+        if 'stream' in results and results['stream'] is None:
+            raise PlaybackFailed()
+
+        if 'error' in results:
+            raise TwitchException(results)
+
         return results
 
     @staticmethod
